--- a/ettore/tarefas.html
+++ b/ettore/tarefas.html
@@ -20,7 +20,7 @@
   <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
 
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
+  
 
   <title>To-Do App</title>
 </head>
@@ -81,7 +81,7 @@
   <ul class="tarefas-terminadas">
 
   </ul>
-
+  <script src="./scripts/login.js" type="module"></script>
 </body>
 
 </html>
