--- a/ettore/index.html
+++ b/ettore/index.html
@@ -26,12 +26,12 @@
       <h1>Acessar</h1>
       <label>
         Email:
-        <input id="inputEmail" type="email" required>
+        <input id="email-input" type="email" required>
         <small id="emailValidate" class="validateField"></small>
       </label>
       <label>
         Senha:
-        <input id="inputPassword" type="password" required>
+        <input id="password-input" type="password" required>
         <small id="passwordValidate" class="validateField"></small>
       </label>
 
