--- a/ettore/signup.html
+++ b/ettore/signup.html
@@ -27,27 +27,27 @@
 
       <label for="nomeInput">
         Nome:
-        <input id="nomeInput" type="text">
+        <input id="name-input" type="text">
         <small id="emailValidate" class="validateField"></small>
       </label>
       <label for="sobrenomeInput">
         Sobrenome:
-        <input id="sobrenomeInput" type="text">
+        <input id="surname-input" type="text">
         <small id="emailValidate" class="validateField"></small>
       </label>
       <label for="emailInput">
         Email:
-        <input id="emailInput" type="email">
+        <input id="email-input" type="email">
         <small id="emailValidate" class="validateField"></small>
       </label>
       <label for="passwordInput">
         Senha:
-        <input id="passwordInput" type="password">
+        <input id="password-input" type="password">
         <small id="emailValidate" class="validateField"></small>
       </label>
       <label for="repeatPasswordInput">
         Repetir senha:
-        <input id="repeatPasswordInput" type="password">
+        <input id="password-confirm-input" type="password">
         <small class="validateField"></small>
       </label>
 
