aplicando outras validacoes

--- a/Jose/index.html
+++ b/Jose/index.html
@@ -35,7 +35,7 @@
         <small id="passwordValidate" class="validateField"></small>
       </label>
 
-      <button id="signupButton">Acessar</button>
+      <button id="submit-button">Acessar</button>
 
     </form>
     <div class="ingressar">
