--- a/ettore/signup.html
+++ b/ettore/signup.html
@@ -37,7 +37,7 @@
       </label>
       <label for="emailInput">
         Email:
-        <input id="email-input" type="email" onblur="Validate.apply(this, 'isEmail')">
+        <input id="email_input" type="email" onblur="Validate.apply(this, 'isEmail')">
         <small class="error"></small>
       </label>
       <label for="password_input">
@@ -63,8 +63,7 @@
   </div>
 </body>
 
-
 <script src="./scripts/signup.js" type="module"></script>
-<script src="./scripts/utils/script.js"></script>
+<script src="./scripts/utils/validation.js"></script>
 
 </html>
