--- a/ettore/tarefas.html
+++ b/ettore/tarefas.html
@@ -32,7 +32,7 @@
     </nav>
 
     <div class="user-info">
-      <p>Nome usuário</p>
+      <p id="user-name">Nome usuário</p>
       <div class="user-image"></div>
       <p id="closeApp">Finalizar sessão</i>
       </p>
@@ -81,7 +81,7 @@
   <ul class="tarefas-terminadas">
 
   </ul>
-  <script src="./scripts/login.js" type="module"></script>
+  <script src="./scripts/tarefas.js" type="module"></script>
 </body>
 
 </html>
