criação de tarefas

--- a/ettore/tarefas.html
+++ b/ettore/tarefas.html
@@ -43,7 +43,7 @@
   <form class="nova-tarefa">
     <div class="not-done "></div>
     <input id="nova-tarefa" type="text" placeholder="Nova tarefa">
-    <button type="submit">
+    <button type="submit" id="task-button">
       <img src="./assets/plus.png" alt="Adicionar uma nova tarefa">
     </button>
   </form>
@@ -81,7 +81,7 @@
   <ul class="tarefas-terminadas">
 
   </ul>
-  <script src="./scripts/tarefas.js" type="module"></script>
+  <script src="./scripts/tasks.js" type="module"></script>
 </body>
 
 </html>
