--- a/ettore/tarefas.html
+++ b/ettore/tarefas.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- ----------------------------- estilos CSS ----------------------------- -->
   <link rel="stylesheet" href="./styles/tarefas.css">
+  <link rel="stylesheet" href="./styles/messages.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <!-- ------------------- Biblioteca de icones - Fontawesome -------------------- -->
@@ -39,42 +40,15 @@
     </div>
   </header>
 
-
   <form class="nova-tarefa">
     <div class="not-done "></div>
-    <input id="nova-tarefa" type="text" placeholder="Nova tarefa">
+    <input id="nova-tarefa" type="text" placeholder="Nova tarefa" >
     <button type="submit" id="task-button">
       <img src="./assets/plus.png" alt="Adicionar uma nova tarefa">
     </button>
   </form>
 
-
   <ul class="tarefas-pendentes">
-    <div>
-    <!-- <div id="skeleton"> -->
-      <li class="tarefa">
-        <div class="not-done"></div>
-        <div class="descricao">
-          <p class="nome">Nova tarefa</p>
-          <p class="timestamp">Criada em: 15/07/21</p>
-        </div>
-      </li>
-      <li class="tarefa">
-        <div class="not-done"></div>
-        <div class="descricao">
-          <p class="nome">Nova tarefa</p>
-          <p class="timestamp">Criada em: 15/07/21</p>
-        </div>
-      </li>
-      <li class="tarefa">
-        <div class="not-done"></div>
-        <div class="descricao">
-          <p class="nome">Nova tarefa</p>
-          <p class="timestamp">Criada em: 15/07/21</p>
-        </div>
-      </li>
-
-    </div>
   </ul>
 
   <h2 class="titulo-terminadas">Tarefas terminadas</h2>
