--- a/ettore/index.html
+++ b/ettore/index.html
@@ -10,6 +10,7 @@
   <!-- ---------------- estilos compartilhados entre login e signup ---------------- -->
   <link rel="stylesheet" href="styles/acesso.css">
   <link rel="stylesheet" href="./styles/messages.css">
+  <link rel="stylesheet" href="./styles/loader.css">
 
 </head>
 
