Botoes de delete e return

--- a/ettore/index.html
+++ b/ettore/index.html
@@ -27,7 +27,7 @@
       <h1>Acessar</h1>
       <label>
         Email:
-        <input id="email_input" type="email" onblur="Validate.apply(this, 'isEmail')" required>
+        <input id="email_input" type="email" required>
         <small class="error"></small>
       </label>
       <label>
@@ -47,7 +47,7 @@
 
 
   <script src="./scripts/index.js" type="module"></script>
-  <script src="./scripts/utils/validation.js"></script>
+ 
 </body>
 
 </html>
