--- a/ettore/signup.html
+++ b/ettore/signup.html
@@ -10,6 +10,7 @@
   <!-- ---------------- estilos compartilhados entre login e signup ---------------- -->
   <link rel="stylesheet" href="styles/acesso.css">
   <link rel="stylesheet" href="styles/common.css">
+  <link rel="stylesheet" href="styles/messages.css">
   <!-- ---------------------- lógica aplicada no registro -------------------- -->
  
 </head>
@@ -37,7 +38,7 @@
       </label>
       <label for="emailInput">
         Email:
-        <input id="email_input" type="email" onblur="Validate.apply(this, 'isEmail')">
+        <input id="email_input" type="email" >
         <small class="error"></small>
       </label>
       <label for="password_input">
