--- a/ettore/tarefas.html
+++ b/ettore/tarefas.html
@@ -8,6 +8,7 @@
   <!-- ----------------------------- estilos CSS ----------------------------- -->
   <link rel="stylesheet" href="./styles/tarefas.css">
   <link rel="stylesheet" href="./styles/messages.css">
+  <link rel="stylesheet" href="./styles/loader.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <!-- ------------------- Biblioteca de icones - Fontawesome -------------------- -->
