--- a/ettore/signup.html
+++ b/ettore/signup.html
@@ -1,70 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>To-Do App</title>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>To-Do App</title>
+        <!-- ---------------- estilos compartilhados entre login e signup ---------------- -->
+        <link rel="stylesheet" href="styles/acesso.css" />
+        <link rel="stylesheet" href="styles/common.css" />
+        <link rel="stylesheet" href="styles/messages.css" />
+        <!-- ---------------------- lógica aplicada no registro -------------------- -->
+    </head>
 
-  <!-- ---------------- estilos compartilhados entre login e signup ---------------- -->
-  <link rel="stylesheet" href="styles/acesso.css">
-  <link rel="stylesheet" href="styles/common.css">
-  <link rel="stylesheet" href="styles/messages.css">
-  <!-- ---------------------- lógica aplicada no registro -------------------- -->
- 
-</head>
+    <body>
+        <div class="left">
+            <img src="./assets/pessoa-signup.png" alt="" />
+        </div>
+        <div class="right">
+            <form>
+                <div class="form-header">
+                    <p>To-Do App</p>
+                </div>
 
-<body>
+                <label for="nomeInput">
+                    Nome:
+                    <input id="name-input" type="text" />
+                    <small class="validateField"></small>
+                </label>
+                <label for="sobrenomeInput">
+                    Sobrenome:
+                    <input id="surname-input" type="text" />
+                    <small class="validateField"></small>
+                </label>
+                <label for="emailInput">
+                    Email:
+                    <input id="email_input" type="email" />
+                    <small class="error"></small>
+                </label>
+                <label for="password_input">
+                    Senha:
+                    <input id="password_input" type="password" />
+                    <small class="error"></small>
+                </label>
+                <label for="repeat_password_input">
+                    Repetir senha:
+                    <input id="repeat_password_input" type="password" />
+                    <small class="validateField"></small>
+                </label>
 
-  <div class="left">
-    <img src="./assets/pessoa-signup.png" alt="">
-  </div>
-  <div class="right">
-    <form>
-      <div class="form-header">
-        <p>To-Do App</p>
-      </div>
+                <button id="signupButton" disabled>Criar conta</button>
+            </form>
+            <div class="ingressar">
+                <a href="index.html">Já possui conta? Acesse aqui</a>
+            </div>
+        </div>
+    </body>
 
-      <label for="nomeInput">
-        Nome:
-        <input id="name-input" type="text">
-        <small class="validateField"></small>
-      </label>
-      <label for="sobrenomeInput">
-        Sobrenome:
-        <input id="surname-input" type="text">
-        <small class="validateField"></small>
-      </label>
-      <label for="emailInput">
-        Email:
-        <input id="email_input" type="email" >
-        <small class="error"></small>
-      </label>
-      <label for="password_input">
-        Senha:
-        <input id="password_input" type="password">
-        <small class="error"></small>
-      </label>
-      <label for="repeat_password_input">
-        Repetir senha:
-        <input 
-        id="repeat_password_input" 
-        type="password" 
-        >
-        <small class="validateField"></small>
-      </label>
-
-      <button id="signingButton" disabled>Criar conta</button>
-
-    </form>
-    <div class="ingressar">
-      <a href="index.html">Já possui conta? Acesse aqui</a>
-    </div>
-  </div>
-</body>
-
-<script src="./scripts/signup.js" type="module"></script>
-<script src="./scripts/utils/validation.js"></script>
-
+    <script src="./scripts/signup.js" type="module"></script>
+    <script src="./scripts/utils/validation.js"></script>
 </html>
