--- a/ettore/signup.html
+++ b/ettore/signup.html
@@ -29,12 +29,12 @@
       <label for="nomeInput">
         Nome:
         <input id="name-input" type="text">
-        <small class="validateField"></small>
+        <small class="error"></small>
       </label>
       <label for="sobrenomeInput">
         Sobrenome:
         <input id="surname-input" type="text">
-        <small class="validateField"></small>
+        <small class="error"></small>
       </label>
       <label for="emailInput">
         Email:
@@ -55,7 +55,7 @@
         <small class="validateField"></small>
       </label>
 
-      <button id="signingButton" disabled>Criar conta</button>
+      <button id="signingButton" disabled >Criar conta</button>
 
     </form>
     <div class="ingressar">
